# IsModuleLibrary

./: .gitignore  CMakeLists.txt  IsNdarrayLibrary.cpp  README.md
build-tool/cmake/: googletest.cmake
include/: pch.hpp
include/imgproc/: bmp_policy.hpp  common.hpp  defs.hpp  img_io.hpp  jpg_policy.hpp  png_policy.hpp  saturate_cast.hpp
include/imgproc/filter/: average_filter.hpp  blur.hpp  median_filter.hpp  utils_filter.hpp
include/imgproc/io/: bmp_policy.hpp  img_io.hpp  jpg_policy.hpp  png_policy.hpp
include/imgproc/win32/: win32_graphics.hpp
include/nbla/: array.hpp  array_registry.hpp  backend_base.hpp  backend_registry.hpp  common.hpp  context.hpp  cpu.hpp  defs.hpp  dtypes.hpp  dtypes_to_type.hpp  event.hpp  exception.hpp  float_bits.hpp  function.hpp  function_registry.hpp  garbage_collector.hpp  global_context.hpp  half.hpp  imperative.hpp  init.hpp  is_nd_array.hpp  logger.hpp  nd_array.hpp  nd_array_extra.hpp  preprocessor_magic.hpp  random_manager.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  synced_array.hpp
include/nbla/array/: cpu_array.hpp
include/nbla/function/: abs.hpp  acos.hpp  acosh.hpp  add2.hpp  add_scalar.hpp  affine.hpp  arange.hpp  asin.hpp  asinh.hpp  atan.hpp  atan2.hpp  atanh.hpp  bc_add2.hpp  broadcast.hpp  ceil.hpp  concatenate.hpp  constant.hpp  cos.hpp  cosh.hpp  cumprod.hpp  cumsum.hpp  div2.hpp  equal.hpp  equal_scalar.hpp  exp.hpp  flip.hpp  floor.hpp  greater.hpp  greater_equal.hpp  greater_equal_scalar.hpp  greater_scalar.hpp  isinf.hpp  isnan.hpp  less.hpp  less_equal.hpp  less_equal_scalar.hpp  less_scalar.hpp  log.hpp  log10.hpp  log1p.hpp  (+48 more)
include/nbla/function/utils/: base_transform_binary.hpp  base_transform_unary.hpp
include/nbla/memory/: allocator.hpp  allocator_callback.hpp  caching_allocator_with_buckets.hpp  cpu_memory.hpp  memory.hpp  naive_allocator.hpp  native_allocator.hpp  virtual_caching_allocator.hpp
include/nbla/utils/: eigen.hpp  nd_index.hpp
include/utils/: defs.hpp  format_string.hpp  split.hpp  string_join.hpp  time_measure.hpp  win32_console.hpp
include/utils/wi32/: win32_char_traits.hpp  win32_console.hpp  win32_exception.hpp
include/utils/win32/: win32_api_error.hpp  win32_char_traits.hpp  win32_console.hpp  win32_exception.hpp
src/: pch.cpp
src/imgproc/: CMakeLists.txt  bmp_policy.cpp  img_io.cpp  jpg_policy.cpp  png_policy.cpp
src/imgproc/filter/: average_filter.cpp  blur.cpp  median_filter.cpp
src/imgproc/io/: bmp_policy.cpp  img_io.cpp  jpg_policy.cpp  png_policy.cpp
src/imgproc/win32/: win32_graphics.cpp
src/nbla/: CMakeLists.txt  array.cpp  array_registry.cpp  backend_registry.cpp  context.cpp  cpu.cpp  event.cpp  exception.cpp  function.cpp  garbage_collector.cpp  global_context.cpp  half.cpp  imperative.cpp  init.cpp  is_nd_array.cpp  nd_array.cpp  random_manager.cpp  singleton_manager.cpp  synced_array.cpp
src/nbla/array/: array.cpp  cpu_array-internal.hpp  cpu_array.cpp
src/nbla/function/generic/: abs.cpp  acos.cpp  acosh.cpp  add2.cpp  add_scalar.cpp  affine.cpp  arange.cpp  asin.cpp  asinh.cpp  atan.cpp  atan2.cpp  atanh.cpp  bc_add2.cpp  broadcast.cpp  ceil.cpp  concatenate.cpp  constant.cpp  cos.cpp  cosh.cpp  cumprod.cpp  cumsum.cpp  div2.cpp  equal.cpp  equal_scalar.cpp  exp.cpp  flip.cpp  floor.cpp  greater.cpp  greater_equal.cpp  greater_equal_scalar.cpp  greater_scalar.cpp  isinf.cpp  isnan.cpp  less.cpp  less_equal.cpp  less_equal_scalar.cpp  less_scalar.cpp  log.cpp  log10.cpp  log1p.cpp  (+48 more)
src/nbla/memory/: allocator.cpp  allocator_callback.cpp  caching_allocator_with_buckets.cpp  cpu_memory.cpp  memory.cpp
src/utils/: CMakeLists.txt  win32_char_traits.cpp  win32_console.cpp
src/utils/win32/: win32_char_traits.cpp  win32_console.cpp
test/: CMakeLists.txt  test_Imgproc.cpp  test_Nnabla.cpp  test_gtest.cpp  test_nnabla.cpp  test_utils.hpp
test/test_imgproc/: CMakeLists.txt  test_imgproc.cpp  test_imgproc.impl.cpp  test_imgproc_filter.cpp  test_imgproc_io.cpp
test/test_nnabla/: CMakeLists.txt  test_nnabla.cpp  test_nnabla_core.cpp  test_nnabla_func.cpp
